SUBDIRS = countries fonts defaults extensions keymaps skin_default Vu_HD rc

dist_pkgdata_DATA = \
	defaultsatlists.xml \
	defaultwizard.xml \
	dreampackagewizard.xml \
	encoding.conf \
	freesat.t1 \
	freesat.t2 \
	keymap.xml \
	menu.xml \
	menuorder.bh \
	prev.png \
	radio.mvi \
	rcpositions.xml \
	setup.xml \
	skin_default.xml \
	skin.xml \
	startwizard.xml \
	tutorialwizard.xml \
	unicable.xml
